--- a/guia1/guia1.tex
+++ b/guia1/guia1.tex
@@ -20,12 +20,12 @@
         
         
 \pagestyle{empty}
-%\setlength\parindent{0pt}
+\setlength\parindent{0pt}
 
 \begin{document}
 
 %\vspace{1.5cm}
-\hfill{Buenos Aires, \today} \\
+%\hfill{Buenos Aires, \today} \\
 
 \begin{center}
  {\large \bf Estructura Electrónica de Materias: \\
